Use ng-bind instead of {{ }} to prevent flash

--- a/examples/client/views/protected.html
+++ b/examples/client/views/protected.html
@@ -4,7 +4,7 @@
       Protected Route
     </div>
     <div class="panel-body">
-      Welcome, {{ userInfo.email }}!
+      Welcome, <span ng-bind="userInfo.email"></span>!
     </div>
   </div>
 </div>
