--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -18,10 +18,15 @@
 
           <hr/>
 
-          <div class="btn-group">
-            <button class="btn btn-primary" ng-click="authenticate('facebook')">Login with Facebook</button>
-            <button class="btn btn-danger" ng-click="authenticate('google')">Login with Google</button>
-          </div>
+          <button class="btn btn-block btn-social btn-facebook" ng-click="authenticate('facebook')">
+            <i class="fa fa-facebook"></i> Sign in with Facebook
+          </button>
+          <button class="btn btn-block btn-social btn-twitter" ng-click="authenticate('twitter')">
+            <i class="fa fa-twitter"></i> Sign in with Twitter
+          </button>
+          <button class="btn btn-block btn-social btn-google-plus" ng-click="authenticate('google')">
+            <i class="fa fa-google-plus"></i> Sign in with Google
+          </button>
         </div>
     </div>
   </div>
