--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -18,13 +18,13 @@
 
           <hr/>
 
-          <button class="btn btn-block btn-social btn-facebook" ng-click="authenticate('facebook')">
+          <button class="btn btn-block btn-social btn-facebook" ng-click="loginOauth('facebook')">
             <i class="fa fa-facebook"></i> Sign in with Facebook
           </button>
-          <button class="btn btn-block btn-social btn-twitter" ng-click="authenticate('twitter')">
+          <button class="btn btn-block btn-social btn-twitter" ng-click="loginOauth('twitter')">
             <i class="fa fa-twitter"></i> Sign in with Twitter
           </button>
-          <button class="btn btn-block btn-social btn-google-plus" ng-click="authenticate('google')">
+          <button class="btn btn-block btn-social btn-google-plus" ng-click="loginOauth('google')">
             <i class="fa fa-google-plus"></i> Sign in with Google
           </button>
         </div>
