--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -21,8 +21,8 @@
           <button class="btn btn-block btn-social btn-facebook" ng-click="loginOauth('facebook')">
             <i class="fa fa-facebook"></i> Sign in with Facebook
           </button>
-          <button class="btn btn-block btn-social btn-twitter" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Sign in with Twitter
+          <button class="btn btn-block btn-social btn-linkedin" ng-click="loginOauth('linkedin')">
+            <i class="fa fa-linkedin"></i> Sign in with LinkedIn
           </button>
           <button class="btn btn-block btn-social btn-google-plus" ng-click="loginOauth('google')">
             <i class="fa fa-google-plus"></i> Sign in with Google
