--- a/demo/client/views/login.html
+++ b/demo/client/views/login.html
@@ -17,7 +17,7 @@
           </form>
 
           <div class="signup-or-separator">
-            <h6 class="text shift text-special">or</h6>
+            <h6 class="text">or</h6>
             <hr>
           </div>
 
