added foursquare sign-in button and provider options

--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -33,6 +33,9 @@
           <button class="btn btn-block btn-social btn-twitter" ng-click="authenticate('twitter')">
             <i class="fa fa-twitter"></i> Sign in with Twitter
           </button>
+          <button class="btn btn-block btn-social btn-foursquare" ng-click="authenticate('foursquare')">
+            <i class="fa fa-foursquare"></i> Sign in with Foursquare
+          </button>
         </div>
     </div>
   </div>
