added github login (client-side)

--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -36,6 +36,9 @@
           <button class="btn btn-block btn-social btn-foursquare" ng-click="authenticate('foursquare')">
             <i class="fa fa-foursquare"></i> Sign in with Foursquare
           </button>
+          <button class="btn btn-block btn-social btn-github" ng-click="authenticate('github')">
+            <i class="fa fa-github"></i> Sign in with GitHub
+          </button>
         </div>
     </div>
   </div>
