--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -1,45 +1,56 @@
 <div class="container">
   <div class="row">
     <div class="center-form panel">
-        <div class="panel-body">
-          <h2 class="text-center">Login</h2>
-          <form method="post" ng-submit="login()" name="loginForm">
+      <div class="panel-body">
+        <h2 class="text-center">Log in</h2>
+        <form method="post" ng-submit="login()" name="loginForm">
+          <div class="form-group has-feedback">
+            <input class="form-control input-lg" type="text" name="email" ng-model="email" placeholder="Email" required autofocus>
+            <span class="ion-at form-control-feedback"></span>
+          </div>
 
-            <div class="form-group">
-              <input class="form-control input-lg" type="text" name="email" ng-model="email" placeholder="Email" required autofocus>
-            </div>
+          <div class="form-group has-feedback">
+            <input class="form-control input-lg" type="password" name="password" ng-model="password" placeholder="Password" required>
+            <span class="ion-key form-control-feedback"></span>
+          </div>
 
-            <div class="form-group">
-              <input class="form-control input-lg" type="password" name="password" ng-model="password" placeholder="Password" required>
-            </div>
+          <button type="submit" ng-disabled="loginForm.$invalid" class="btn  btn-block btn-success">Log in</button>
 
-            <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg btn-block btn-success">Sign In</button>
-          </form>
+          <br/>
+
+          <p class="text-center">
+            <a href="#">Forgot your password?</a>
+          </p>
+
+          <p class="text-center text-muted">
+            <small>Don't have an account yet? <a href="/signup">Sign up</a></small>
+          </p>
 
           <div class="signup-or-separator">
             <h6 class="text">or</h6>
             <hr>
           </div>
 
-          <button class="btn btn-block btn-social btn-facebook" ng-click="authenticate('facebook')">
-            <i class="fa fa-facebook"></i> Sign in with Facebook
+          <button class="btn btn-block btn-facebook" ng-click="authenticate('facebook')">
+            <i class="ion-social-facebook"></i> Sign in with Facebook
           </button>
-          <button class="btn btn-block btn-social btn-linkedin" ng-click="authenticate('linkedin')">
-            <i class="fa fa-linkedin"></i> Sign in with LinkedIn
+          <button class="btn btn-block btn-google-plus" ng-click="authenticate('google')">
+            <span class="ion-social-googleplus"></span>Sign in with Google
           </button>
-          <button class="btn btn-block btn-social btn-google-plus" ng-click="authenticate('google')">
-            <i class="fa fa-google-plus"></i> Sign in with Google
+          <button class="btn btn-block btn-linkedin" ng-click="authenticate('linkedin')">
+            <i class="ion-social-linkedin"></i> Sign in with LinkedIn
           </button>
-          <button class="btn btn-block btn-social btn-twitter" ng-click="authenticate('twitter')">
-            <i class="fa fa-twitter"></i> Sign in with Twitter
+          <button class="btn btn-block btn-twitter" ng-click="authenticate('twitter')">
+            <i class="ion-social-twitter"></i> Sign in with Twitter
           </button>
-          <button class="btn btn-block btn-social btn-foursquare" ng-click="authenticate('foursquare')">
-            <i class="fa fa-foursquare"></i> Sign in with Foursquare
+          <button class="btn btn-block btn-github" ng-click="authenticate('github')">
+            <i class="ion-social-github"></i> Sign in with GitHub
           </button>
-          <button class="btn btn-block btn-social btn-github" ng-click="authenticate('github')">
-            <i class="fa fa-github"></i> Sign in with GitHub
+          <button class="btn btn-block btn-foursquare" ng-click="authenticate('foursquare')">
+            <i class="ion-social-foursquare"></i> Sign in with Foursquare
           </button>
-        </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
