--- a/examples/client/stylesheets/style.css
+++ b/examples/client/stylesheets/style.css
@@ -1,37 +1,24 @@
 body {
   background: #e4e7ec;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
 }
 
-.navbar-nav {
-  float: left;
-  margin: 0;
+a {
+  color: #000;
 }
 
-.navbar-default {
-  box-shadow: 0 3px 2px -3px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  border: #e3e9ec;
+.text-muted {
+  color: #90939a;
 }
 
-.navbar-default .navbar-nav > li {
-  float: left;
-}
-
-.navbar-default .navbar-nav > li > a {
-  padding: 15px;
-  color: #848484;
-}
-
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #333;
-  background-color: #f7f7f7;
+.navbar {
+  border: 0;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
 }
 
 .navbar-header {
@@ -39,21 +26,43 @@ h1, h2, h3, h4, h5, h6 {
   padding-left: 15px;
 }
 
-.navbar-default .navbar-brand {
-  margin-left: -15px;
+.navbar-nav {
+  float: left;
+  margin: 0;
+}
+
+.navbar-nav > li {
+  float: left;
+}
+
+.navbar-nav > li > a {
+  padding: 15px;
+}
+
+.navbar-default {
+  background: #fff;
   color: #fff;
-  background-color: #22ae5f;
-  transition: 0.25s all;
+}
+
+.navbar-default .navbar-brand {
+  color: #333;
+  background-color: #ffe939;
 }
 
 .navbar-default .navbar-brand:hover {
-  background: #000;
-  color: #fff;
+  color: #ffe939;
+  background-color: #333;
 }
+
+.navbar-brand {
+  transition: 0.25s all;
+  margin-left: -15px;
+}
+
 .panel {
   border-color: #cfd9D7;
   border-radius: 2px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 17px rgba(0, 0, 0, .2);
 }
 
 .panel-default > .panel-heading {
@@ -102,6 +111,22 @@ h1, h2, h3, h4, h5, h6 {
   padding: 8px;
 }
 
+.has-feedback .form-control-feedback {
+  top: 0;
+  left: 0;
+  width: 46px;
+  height: 46px;
+  line-height: 46px;
+  color: #555;
+}
+
+[class^='ion-'] {
+  font-size: 1.2em;
+}
+
+.has-feedback .form-control {
+  padding-left: 42.5px;
+}
 
 .alert-material {
   font-family: 'Roboto', sans-serif;
@@ -118,6 +143,89 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   bottom: 12px;
   right: 12px;
+}
+
+.btn {
+  border-radius: 2px;
+  font-weight: bold
+}
+
+.btn-lg {
+  font-size: 14px;
+}
+
+.btn [class^='ion-'] {
+  margin-right: 6px;
+}
+
+/*********************
+* Social Buttons
+*********************/
+
+.btn-google-plus {
+  color: #fff;
+  background-color: #dd4b39;
+  border: 1px solid #d54331;
+}
+
+.btn-google-plus:hover {
+  color: #fff;
+  background-color: #cb3927;
+}
+
+.btn-facebook {
+  color: #fff;
+  background-color: #3b5998;
+  border: 1px solid #335190;
+}
+
+.btn-facebook:hover {
+  color: #fff;
+  background-color: #294786;
+}
+
+.btn-linkedin {
+  color: #fff;
+  background-color: #007bb6;
+  border: 1px solid #0073ae;
+}
+
+.btn-linkedin:hover {
+  color: #fff;
+  background-color: #0069a4;
+}
+
+.btn-twitter {
+  color: #fff;
+  background-color: #00aced;
+  border: 1px solid #009fdb;
+}
+
+.btn-twitter:hover {
+  color: #fff;
+  background-color: #0090c7;
+}
+
+.btn-foursquare {
+  color: #fff;
+  background-color: #0072b1;
+  border: 1px solid #00669e;
+}
+
+.btn-foursquare:hover {
+  color: #fff;
+  background-color: #00598a;
+}
+
+.btn-github {
+  color: #fff;
+  background-color: #444;
+  border: 1px solid #3b3b3b;
+}
+
+.btn-github:hover {
+  color: #fff;
+  background-color: #303030;
 }
 
 .fade-repeat.ng-enter {
