--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -23,7 +23,7 @@
           </p>
 
           <p class="text-center text-muted">
-            <small>Don't have an account yet? <a href="/signup">Sign up</a></small>
+            <small>Don't have an account yet? <a href="/#/signup">Sign up</a></small>
           </p>
 
           <div class="signup-or-separator">
