client: fade zoom animation on page transitions

--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -14,7 +14,7 @@
             <span class="ion-key form-control-feedback"></span>
           </div>
 
-          <button type="submit" ng-disabled="loginForm.$invalid" class="btn  btn-block btn-success">Log in</button>
+          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success">Log in</button>
 
           <br/>
 
