added linked accounts buttons to profile page

--- a/examples/client/views/profile.html
+++ b/examples/client/views/profile.html
@@ -1,29 +1,70 @@
 <div class="container">
   <div class="panel panel-default">
-    <div class="panel-heading">
-      Protected Route
-    </div>
+    <div class="panel-heading">Profile</div>
     <div class="panel-body">
-
+      <legend><i class="ion-clipboard"></i> Edit My Profile</legend>
       <form method="post" ng-submit="updateProfile()">
-        <legend><i class="ion-clipboard"></i> Edit My Profile</legend>
         <div class="form-group">
-          <label class="control-label" for="id"><i class="ion-pound"></i> User ID</label>
-          <input class="form-control" type="text" ng-model="id" disabled/>
+          <label class="control-label"><i class="ion-person"></i> Display Name</label>
+          <input type="text" class="form-control" ng-model="currentUser.displayName" />
         </div>
         <div class="form-group">
-          <label class="control-label" for="displayName"><i class="ion-person"></i> Display Name</label>
-          <input class="form-control" type="text" ng-model="displayName" />
-        </div>
-        <div class="form-group">
-          <label class="control-label" for="email"><i class="ion-at"></i> Email Address</label>
-          <input class="form-control" type="email" ng-model="email" />
+          <label class="control-label"><i class="ion-at"></i> Email Address</label>
+          <input type="email" class="form-control" ng-model="currentUser.email" />
         </div>
         <button class="btn btn-lg btn-success">Update Information</button>
       </form>
+    </div>
+  </div>
 
-      <h2>Welcome, {{currentUser.firstName || currentUser.email}}!</h2>
-      <pre ng-bind="currentUser | json"></pre>
+  <div class="panel panel-default">
+    <div class="panel-heading">Accounts</div>
+    <div class="panel-body">
+      <legend><i class="ion-link"></i> Linked Accounts</legend>
+      <div class="btn-group-vertical">
+
+        <button class="btn btn-sm btn-danger" ng-if="currentUser.facebook" ng-click="authenticate('facebook')">
+          <i class="ion-social-facebook"></i> Unlink Facebook Account
+        </button>
+        <button class="btn btn-sm btn-default" ng-if="!currentUser.facebook" ng-click="authenticate('facebook')">
+          <i class="ion-social-facebook"></i> Link Facebook Account
+        </button>
+
+        <button class="btn btn-sm btn-danger" ng-if="currentUser.google" ng-click="authenticate('google')">
+          <i class="ion-social-googleplus"></i> Unlink Google Account
+        </button>
+        <button class="btn btn-sm btn-default" ng-if="!currentUser.google" ng-click="authenticate('google')">
+          <i class="ion-social-googleplus"></i> Link Google Account
+        </button>
+
+        <button class="btn btn-sm btn-default" ng-if="currentUser.linkedin" ng-click="authenticate('linkedin')">
+          <i class="ion-social-linkedin"></i> Unlink LinkedIn Account
+        </button>
+        <button class="btn btn-sm btn-default" ng-if="!currentUser.linkedin" ng-click="authenticate('linkedin')">
+          <i class="ion-social-linkedin"></i> Link LinkedIn Account
+        </button>
+
+        <button class="btn btn-sm btn-default" ng-if="currentUser.twitter" ng-click="authenticate('twitter')">
+          <i class="ion-social-twitter"></i> Unlink Twitter Account
+        </button>
+        <button class="btn btn-sm btn-default" ng-if="!currentUser.twitter" ng-click="authenticate('twitter')">
+          <i class="ion-social-twitter"></i> Link Twitter Account
+        </button>
+
+        <button class="btn btn-sm btn-default" ng-if="currentUser.github" ng-click="authenticate('github')">
+          <i class="ion-social-github"></i> Unlink GitHub Account
+        </button>
+        <button class="btn btn-sm btn-default" ng-if="!currentUser.github" ng-click="authenticate('github')">
+          <i class="ion-social-github"></i> Link GitHub Account
+        </button>
+
+        <button class="btn btn-sm btn-default" ng-if="currentUser.foursquare" ng-click="authenticate('foursquare')">
+          <i class="ion-social-foursquare"></i> Unlink Foursquare Account
+        </button>
+        <button class="btn btn-sm btn-default" ng-if="!currentUser.foursquare" ng-click="authenticate('foursquare')">
+          <i class="ion-social-foursquare"></i> Link Foursquare Account
+        </button>
+      </div>
     </div>
   </div>
 </div>
