css: button transition animations

--- a/examples/client/stylesheets/style.css
+++ b/examples/client/stylesheets/style.css
@@ -158,6 +158,7 @@ a {
   font-weight: bold;
   border-radius: 2px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
+  transition: background-color 0.25s ease-out;
 }
 
 .btn-primary {
