--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -44,11 +44,11 @@
         <button class="btn btn-block btn-twitter" ng-click="authenticate('twitter')">
           <i class="ion-social-twitter"></i> Sign in with Twitter
         </button>
+        <button class="btn btn-block btn-foursquare" ng-click="authenticate('foursquare')">
+          <i class="fa fa-foursquare"></i> Sign in with Foursquare
+        </button>
         <button class="btn btn-block btn-github" ng-click="authenticate('github')">
           <i class="ion-social-github"></i> Sign in with GitHub
-        </button>
-        <button class="btn btn-block btn-foursquare" ng-click="authenticate('foursquare')">
-          <i class="ion-social-foursquare"></i> Sign in with Foursquare
         </button>
       </div>
     </div>
