--- a/examples/client/views/login.html
+++ b/examples/client/views/login.html
@@ -50,6 +50,9 @@
         <button class="btn btn-block btn-github" ng-click="authenticate('github')">
           <i class="ion-social-github"></i> Sign in with GitHub
         </button>
+        <button class="btn btn-block btn-yahoo" ng-click="authenticate('yahoo')">
+          <i class="ion-social-yahoo"></i> Sign in with Yahoo
+        </button>
       </div>
     </div>
   </div>
