added github project and report issue buttons

--- a/examples/client/partials/home.html
+++ b/examples/client/partials/home.html
@@ -22,4 +22,8 @@
       </div>
     </div>
   </div>
+  <div class="text-center">
+    <a class="btn btn-default" href="https://github.com/sahat/satellizer"><i class="ion-social-github"></i> GitHub project</a>
+    <a class="btn btn-default" href="https://github.com/sahat/satellizer/issues/new"><i class="ion-bug"></i> Report issue</a>
+  </div>
 </div>
