--- a/examples/client/partials/profile.html
+++ b/examples/client/partials/profile.html
@@ -61,7 +61,14 @@
           <i class="ion-social-foursquare"></i> Unlink Foursquare Account
         </button>
         <button class="btn btn-sm btn-primary" ng-if="!user.foursquare" ng-click="link('foursquare')">
-          <i class="fa fa-foursquare"></i> Link Foursquare Account
+          <i class="ion-social-foursquare"></i> Link Foursquare Account
+        </button>
+
+        <button class="btn btn-sm btn-danger" ng-if="user.yahoo" ng-click="unlink('yahoo')">
+          <i class="ion-social-yahoo"></i> Unlink Yahoo Account
+        </button>
+        <button class="btn btn-sm btn-primary" ng-if="!user.yahoo" ng-click="link('yahoo')">
+          <i class="ion-social-yahoo"></i> Link Yahoo Account
         </button>
       </div>
     </div>
