added windows live button

--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -53,6 +53,9 @@
         <button class="btn btn-block btn-yahoo" ng-click="authenticate('yahoo')">
           <i class="ion-social-yahoo"></i> Sign in with Yahoo
         </button>
+        <button class="btn btn-block btn-live" ng-click="authenticate('live')">
+          <i class="ion-social-windows"></i> Sign in with Windows Live
+        </button>
       </div>
     </div>
   </div>
