updated profile template to display profile image as well

--- a/examples/client/partials/profile.html
+++ b/examples/client/partials/profile.html
@@ -6,7 +6,7 @@
       <form method="post" ng-submit="updateProfile()">
         <div class="form-group">
           <label class="control-label">Profile Picture</label>
-          <img class="profile-picture" src="http://placehold.it/100x100">
+          <img class="profile-picture" ng-src="{{user.picture || 'http://placehold.it/100x100'}}">
         </div>
         <div class="form-group">
           <label class="control-label"><i class="ion-person"></i> Display Name</label>
