ionic: background styles for .list-inset and .pane

--- a/examples/myApp/www/css/style.css
+++ b/examples/myApp/www/css/style.css
@@ -1,1 +1,7 @@
-/* Empty. Add your own CSS if you like */
+.pane {
+  background-color: #e9eaed;
+}
+
+.list-inset {
+  background-color: #e9eaed;
+}
