added github stats to the home page

--- a/examples/client/partials/home.html
+++ b/examples/client/partials/home.html
@@ -21,9 +21,17 @@
         </div>
       </div>
     </div>
+    <div class="panel-footer text-center">
+      <ul class="list-inline">
+        <li><i class="ion-star"></i> {{stars | number}} stars</li>
+        <li><i class="ion-fork-repo"></i> {{forks | number}} forks</li>
+        <li><i class="ion-pull-request"></i> {{issues | number}} issues</li>
+      </ul>
+    </div>
   </div>
-  <div class="text-center">
-    <a class="btn btn-default" href="https://github.com/sahat/satellizer"><i class="ion-social-github"></i> GitHub project</a>
-    <a class="btn btn-default" href="https://github.com/sahat/satellizer/issues/new"><i class="ion-bug"></i> Report issue</a>
-  </div>
+</div>
+<div class="text-center">
+  <a class="btn btn-default" href="https://github.com/sahat/satellizer"><i class="ion-social-github"></i> GitHub project</a>
+  <a class="btn btn-default" href="https://github.com/sahat/satellizer/issues/new"><i class="ion-bug"></i> Report issue</a>
+</div>
 </div>
