--- a/examples/client/partials/login.html
+++ b/examples/client/partials/login.html
@@ -5,33 +5,23 @@
         <h2 class="text-center">Log in</h2>
         <form method="post" ng-submit="login()" name="loginForm">
           <div class="form-group has-feedback">
-            <input class="form-control input-lg" type="text" name="email" ng-model="email" placeholder="Email" required autofocus>
+            <input class="form-control input-lg" type="text" name="email" ng-model="user.email" placeholder="Email" required autofocus>
             <span class="ion-at form-control-feedback"></span>
           </div>
-
           <div class="form-group has-feedback">
-            <input class="form-control input-lg" type="password" name="password" ng-model="password" placeholder="Password" required>
+            <input class="form-control input-lg" type="password" name="password" ng-model="user.password" placeholder="Password" required>
             <span class="ion-key form-control-feedback"></span>
           </div>
-
           <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success">Log in</button>
-
           <br/>
-
-          <p class="text-center">
-            <a href="#">Forgot your password?</a>
-          </p>
-
           <p class="text-center text-muted">
             <small>Don't have an account yet? <a href="/#/signup">Sign up</a></small>
           </p>
-
           <div class="signup-or-separator">
             <h6 class="text">or</h6>
             <hr>
           </div>
         </form>
-
         <button class="btn btn-block btn-facebook" ng-click="authenticate('facebook')">
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
